<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/Background"
    android:id="@+id/detail_content"
    tools:context=".ui.activities.DetailActivity"
    tools:keep="@layout/activity_detail">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Background"
            app:contentScrim="@color/Background"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:background="@android:color/black">

                <ImageView
                    android:id="@+id/iv_backdrop"
                    android:layout_width="0dp"
                    android:layout_height="260dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/poster"
                    android:src="@android:color/black"
                    app:layout_constraintDimensionRatio="16:9"
                    tools:src="@drawable/backdrop_avengers"
                    android:alpha="0.9"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/iv_poster_detail"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:layout_marginStart="@dimen/large"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="9:16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.59000003"
                    tools:src="@drawable/poster_infinity_war"
                    android:contentDescription="@string/image_poster" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_bookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Background"
                    android:clickable="true"
                    android:contentDescription="@string/add_bookmark"
                    android:focusable="true"
                    app:borderWidth="3dp"
                    app:elevation="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_backdrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.88"
                    app:layout_constraintStart_toStartOf="@+id/iv_backdrop"
                    app:layout_constraintTop_toBottomOf="@+id/iv_backdrop"
                    app:tint="@color/colorPrimary"
                    tools:src="@drawable/ic_outline_bookmark_border_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <ImageButton
                    android:id="@+id/btn_back_detail"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="@dimen/small"
                    android:background="@drawable/background_transparent"
                    android:contentDescription="@string/app_icon"
                    android:clickable="true"
                    android:paddingStart="5dp"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
                    android:focusable="true"
                    tools:ignore="RtlSymmetry" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_detail"
        app:lottie_rawRes="@raw/loader_spinner"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:lottie_colorFilter="@color/red_200"
        android:visibility="visible"
        app:lottie_loop="true"
        android:layout_gravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:elevation="5dp"
                android:id="@+id/title_template"
                layout="@layout/item_detail"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_marginBottom="2dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small"
                android:layout_marginVertical="@dimen/small"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_template"
                app:layout_constraintVertical_bias="0.0"
                android:elevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/standard">

                    <TextView
                        style="@style/Headline3"
                        android:text="@string/overview"
                        android:textSize="22sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_overview"
                        style="@style/Headline3"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="@dimen/small"
                        android:textStyle="normal"
                        android:textSize="18sp"
                        android:textColor="@color/textOnWhite"
                        tools:text="@tools:sample/lorem/random" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>