<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_baseline_movie_filter_24"
        android:title="@string/title_movie"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_baseline_live_tv_24"
        android:title="@string/title_tv_show"
        app:showAsAction="ifRoom"/>

</menu>