<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movie_favorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:itemCount="8"
        tools:listitem="@layout/item_data" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_movie_fav"
        app:lottie_rawRes="@raw/loader_spinner"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:lottie_colorFilter="@color/red_200"
        android:visibility="gone"
        tools:visibility="visible"
        app:lottie_loop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>